--- a/website/backend/templates/inflight.html
+++ b/website/backend/templates/inflight.html
@@ -104,7 +104,7 @@
     <body>
         <header class="bg-light">
             <nav class="navbar navbar-expand-lg navbar-light container-fluid">
-                <a class="navbar-brand" href="#"><img src="../logo.png" alt="FlyDream" class="logo"></a>
+                <a class="navbar-brand" href="#"><img src="/static/logo.png" alt="FlyDream" class="logo"></a>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
