--- a/website/backend/templates/seats.html
+++ b/website/backend/templates/seats.html
@@ -204,7 +204,7 @@
     <body>
         <header class="bg-light">
             <nav class="navbar navbar-expand-lg navbar-light container-fluid">
-                <a class="navbar-brand" href="#"><img src="../logo.png" alt="FlyDream" class="logo"></a>
+                <a class="navbar-brand" href="#"><img src="/static/logo.png" alt="FlyDream" class="logo"></a>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -267,7 +267,7 @@
                                 <div class="container mt-4">
                                     <div id="passengers_list" class="accordion">
                                         <!--If there are adults then draw the toggle for the adult -->
-                                        {%if ticket_dem["adults"] != 0%}
+                                        {%if ticket_dem["adults"] > 0%}
                                         
                                         <div class="accordion-item">
                                             <h2 class="accordion-header">
@@ -292,7 +292,7 @@
                                         </div>
                                         {%endif%}
                                         <!--if there are children then draw the above div-->
-                                        {%if ticket_dem["child"] != 0%}
+                                        {%if ticket_dem["child"] > 0%}
                                         <div class="accordion-item">
                                             <h2 class="accordion-header">
                                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#child-passengers">
