--- a/website/backend/templates/inflight.html
+++ b/website/backend/templates/inflight.html
@@ -160,7 +160,7 @@
             
             <section>
                 <div class="container my-5">
-                    <form action="/submit_services" method="POST">
+                    <form action="/inflight" method="POST">
                         <div class="container">
                             <!-- Meal Options -->
                             <div class="row mb-4 mono text-center">
