--- a/website/backend/templates/details.html
+++ b/website/backend/templates/details.html
@@ -142,7 +142,7 @@
             </section>
             
             <section>
-                <form>
+                <form action="/payment" method="post">
                     <div class="container mt-5">
                         <h2 class="mb-4 mono">Passenger Details</h2>
                 
