--- a/website/backend/templates/index.html
+++ b/website/backend/templates/index.html
@@ -215,17 +215,17 @@
                                     <div class="tab-pane fade" id="manage" role="tabpanel">
                                         <div class="row">
                                             <div class="col">
-                                                <form>
+                                                <form action="/manage" method="post">
                                                     <div class="row mb-3">
                                                         <div class="col-md-6">
-                                                            <input type="text" class="form-control" placeholder="Ticket no/Reservation code">
+                                                            <input type="text" name="ticketno" class="form-control" placeholder="Ticket no/Reservation code">
                                                         </div>
                                                         <div class="col-md-6">
-                                                            <input type="email" class="form-control" placeholder="Your email">
+                                                            <input type="email" name="email" class="form-control" placeholder="Your email">
                                                         </div>
                                                     </div>
                                                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                                                        <button class="btn btn-warning px-4" type="submit">SEARCH</button>
+                                                        <button class="btn btn-warning px-4" type="submit">Search</button>
                                                     </div>
                                                 </form>
                                             </div>
@@ -273,6 +273,7 @@
                 <p class="text-center mb-0">FlyDreamAir x meowLAN</p>
             </div>
         </footer>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <script>
             const departureDateInput = document.getElementById('departDate');
